--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^4.6.2",
+    "formik": "^1.5.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
