--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "prodan.bg",
     "version": "1.0.0",
     "scripts": {
-        "start-server": "cd server && npm run dev",
+        "start-server": "cd server && node server.js",
         "start-client": "cd client && npm run dev",
         "start": "npm-run-all --parallel start-server start-client"
     },
